# scorep_binding_python

./: .clang-format  .codestyle.pep8  .flake8  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DEVELOPING.md  HowTo.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  scorep.c  scorep.cpp  scorep.py  scorep_trace.py  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml  publish.yml  static_analysis.yml  unit_tests.yml
benchmark/: benchmark.py  benchmark_helper.py  bm_baseline.py  bm_simplefunc.py  compare.py  compare_commits.sh  run.sh  test_1.py  test_2.py
cmake/: FindScorep.cmake
scorep/: __init__.py  __main__.py  compile.py  helper.py  instrumenter.py  strace.py  subsystem.py  trace.py  trace_dummy.py  trace_scorep.py  user.py
scorep/_instrumenters/: base_instrumenter.py  dummy.py  scorep_cProfile.py  scorep_cTrace.py  scorep_instrumenter.py  scorep_profile.py  scorep_trace.py  utils.py
scorep/instrumenters/: base_instrumenter.py  dummy.py  scorep_instrumenter.py  scorep_instrumenter_base.py  scorep_profile.py  scorep_profile_record.py  scorep_trace.py
src/: classes.cpp  classes.hpp  methods.cpp  scorep.cpp  scorep.hpp  scorep_bindings.cpp
src/scorepy/: cInstrumenter.cpp  cInstrumenter.hpp  compat.hpp  cstring.h  events.cpp  events.hpp  pathUtils.cpp  pathUtils.hpp  pythonHelpers.cpp  pythonHelpers.hpp  pythoncapi_compat.h
test/: conftest.py  interrupt.py  numpy_dot.py  test.py  test_call_main.py  test_context.py  test_helper.py  test_instrumentation.py  test_instrumentation2.py  test_interrupt.py  test_mpi.py  test_nosleep.py  test_numpy_dot.py  test_oa_regions.py  test_pathUtils.cpp  test_scorep.py  test_sleep.py  test_subsystem.py  test_user_instrumentation.py  test_user_regions.py  test_user_rewind.py  user_regions.py  utils.py
test/cases/: callsite.py  classes.py  classes2.py  decorator.py  error_region.py  external_instrumentation.py  file_io.py  force_finalize.py  instrumentation.py  instrumentation2.py  interrupt.py  io.py  miniasync.py  mpi.py  numpy_dot_large.py  read.py  reload.py  use_threads.py  user_instrumentation.py  user_regions.py
